# proyecto1_base_de_datos_II

./: CMakeLists.txt  ISAM.h  Pokemon.h  README.md  a.out  arbolavl  main.cpp
avl/: main.cpp
dataset/: pokemon.csv
extendiblehashing/: Bucket_EH.cpp  Bucket_EH.hh  ExtendibleHashing.cpp  ExtendibleHashing.hh  main.cpp  prueba.cpp  prueba1.csv  prueba3.csv  registro.h
parser/: Parser.hpp  Parser1.cpp  Scanner.cpp  Scanner.hpp  lex.yy.c  sql_parser.l  sql_parser.y
